# kinova-ros

kinova_bringup/launch/: haptic_glove.launch
kinova_demo/launch/: grasp_quality.launch
kinova_description/: CMakeLists.txt  IndexContactPlugin.cc  IndexContactPlugin.hh  package.xml
kinova_description/urdf/: kinova_common.xacro
kinova_driver/src/: kinova_joint_angles_action.cpp  kinova_joint_trajectory_controller.cpp
kinova_glove_control/: CMakeLists.txt  package.xml
kinova_glove_control/launch/: ada_control.launch  haptic_glove.launch  jaco_control.launch
kinova_glove_control/src/: arm_pos_node.cpp  arm_pos_node_test.cpp  calibration_node.cpp  finger_calibration_node.cpp  full_control_node.cpp  full_control_node.py  imu_calibration_test.cpp  new_calibration_node.cpp  sine_wave_test.cpp  velocity_control_node.cpp
new_rosbags/: ClaireLiftPlace.bag  LiftPlaceExample.bag  LiftPlaceTest1.bag  TapTestSideGrGraspRaag.bag  WeightPlaceTest.bag
new_rosbags/ClaireLiftPlace/: _slash_haptic_middle.csv  _slash_haptic_pointer.csv  _slash_haptic_thumb.csv  _slash_objectPlaced.csv
new_rosbags/LiftPlaceExample/: _slash_haptic_middle.csv  _slash_haptic_pointer.csv  _slash_haptic_thumb.csv
new_rosbags/LiftPlaceTest1/: _slash_haptic_middle.csv  _slash_haptic_pointer.csv  _slash_haptic_thumb.csv  _slash_objectPlaced.csv
new_rosbags/PokingTests/: PokingTestTopGrasp1.bag  PokingTestTopGrasp2.bag
new_rosbags/TapTestClean/: TapTestClean.bag  _slash_haptic_middle.csv  _slash_haptic_pointer.csv  _slash_haptic_thumb.csv  _slash_objectPlaced.csv
new_rosbags/UserTests/: AnnMarieTapTest.bag  (+1 more)
rosbags/: force_feedback_raw_norm_teleop.bag  test.txt  wrist_teleop.bag
(+115 files in other folders)
